--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-plugin-react": "^7.13.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-countup": "^4.1.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
