--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "eslint": "^5.16.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.17.0",
     "node-sass": "^4.13.0",
-    "react": "^16.10.1",
-    "react-countup": "^4.2.2",
-    "react-dom": "^16.10.1",
-    "react-scripts": "3.0.1"
+    "react": "^16.12.0",
+    "react-countup": "^4.3.1",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
