--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "dependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.17.0",
-    "node-sass": "^7.0.0",
     "react": "^16.12.0",
     "react-countup": "^4.3.1",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "sass": "^1.49.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "react-scripts --openssl-legacy-provider test",
+    "eject": "react-scripts --openssl-legacy-provider eject",
     "lint": "eslint src/**/*.js",
     "lint-fix": "eslint src/**/*.js --fix"
   },
